--- a/sample_config.env
+++ b/sample_config.env
@@ -3,11 +3,11 @@
 
 #________COMPULSORY____________#
 
-TG_BOT_TOKEN = ""  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-APP_ID = 
-API_HASH = ""
-OWNER_ID = 
-AUTH_CHANNEL = "" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
+TG_BOT_TOKEN = "5239742708:AAFIMLkT_3dE3EO3Wn8O79rJ9b81PzKKRjI"  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
+APP_ID = 11768964
+API_HASH = "ba5754729383ce61b25f59409bfded92"
+OWNER_ID = 739817842
+AUTH_CHANNEL = "-1001637726535" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
 
 
 #________NOT COMPULSORY____________#
@@ -15,7 +15,7 @@ AUTH_CHANNEL = "" #Add IDs separated by a SPACE (Like :: -10012503747 -100125869
 # For RCLONE ::
 # Name of the folder....not ID
 DESTINATION_FOLDER = "TorrentLeech-Gdrive"
-INDEX_LINK = ""
+INDEX_LINK = "https://github.com/RAJANGAMR/Px-Leech-Pro"
 
 # OTHERS ::
 DEF_THUMB_NAIL_VID_S = ""
